--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <body>
         <audio id="clearsound" src="./sound/pop.ogg" preload="auto"></audio>
         <canvas width='300' height='500'></canvas>
-        <button id="gameStart">げーむをするヾ(*・∀・)/</button>
+        <button id="gameStart">げーむするよーヾ(*・∀・)/</button>
         <script src='./js/controller.js'></script>
         <script src='./js/render.js'></script>
     </body>
